<resources
  xmlns:tools="http://schemas.android.com/tools"
  >
    <string name="no_manual">Cannot retrieve user manual from the web</string>
    <string name="user_man_ok">Installed user manual translation</string>
    <string name="user_man_fail">Failed to install user manual translation [%1$d]</string>
    <string name="db_not_ready">Survey database not ready</string>
    <string name="tdx_stale" translatable="false">TopoDroid cannot access its old folder.\nClose the app and grant FILES ACCESS using the Settings app.\n\nSee https://marcocorvi.altervista.org/HowtoGrantStorageAccess.pdf</string>
    <string name="desc_menu" copyable="fr es it pt sk">Menu</string>
  <string name="r_title">Android-13+ WARNING</string>
  <string name="r_dialog">With Android-13 TopoDroid must store surveys in the app private folder under "Android/data". Beware that this folder is usually deleted when the app is uninstalled. To confirm type\n"%1$s"\nin the field below and tap the button.</string>
  <string name="r_i_understood" translatable="false">I UNDERSTOOD</string>
  <string name="r_continue">CONTINUE</string>
  <string name="r_quit">QUIT</string>
    <string name="app_name" translatable="false">TopoDroid-X</string>
    <string name="tdm_title" copyable="all">TopoDroid Manager</string>
    <string name="tdm_config_project" copyable="all">project.tdconfig</string>
    <string name="double_back">Click BACK again to exit</string>
    <string name="tdm_disconnected_survey">Disconnected survey</string>
    <string name="new_survey_label">New survey</string>
    <string name="distox_label" translatable="false">Survey Device</string>
    <string name="cave3d_label" translatable="false">Cave3D</string>
    <string name="symbols_ask">Install drawing tools v.%1$s?\n(Current v.%2$s)</string>
    <string name="symbols_recover">Recover drawing tools ?</string>
    <string name="version_check_newer">Newer version available: %1$d</string>
    <string name="setup_textsize_title">TopoDroid setup. Text size</string>
    <string name="setup_buttonsize_title">TopoDroid setup. Button size</string>
    <string name="setup_drawingunit_title">TopoDroid setup. Icons size</string>
    <string name="setup_done_title">TopoDroid setup. Done</string>
    <string name="setup_buttonsample">Button sample</string>
    <string name="setup_textsize">Set the text size.\nYou can always change this later through the main window settings.</string>
    <string name="setup_buttonsize">Set the button size.\nYou can always change this later through the main window settings.</string>
    <string name="setup_drawingunit">Set the sketch icon size.\nYou can always change this later through the sketch window settings.</string>
    <string name="setup_done">The basic setup is done.\n\nIf you experience problems with the connection to the surveying device, try and set the insecure socket.\n\nThere are other settings for the presentation of the sketches (icon size, label size, line width etc.); you can set them later.\n</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="POINT" copyable="fr">POINT</string>
    <string name="LINE">LINE</string>
    <string name="AREA" copyable="it">AREA</string>
    <string name="HELP">HELP</string>
    <string name="STATION">STATION </string>
    <string name="UP">UP</string>
    <string name="DOWN">DOWN</string>
    <string name="xsplay" copyable="all">X</string>
    <string name="hsplay" copyable="all">H</string>
    <string name="vsplay" copyable="all">V</string>
    <string name="pref_gen">General</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_data">Data</string>
    <string name="pref_plot">Sketch</string>
    <string name="pref_3d">3D viewer</string>
    <string name="pref_io">Export</string>
    <string name="pref_bt" copyable="all">Bluetooth</string>
    <string name="pref_cal">Calibration</string>
    <string name="pref_xt">Special functions</string>
    <string name="cut">CUT</string>
    <string name="copy">COPY</string>
    <string name="paste">PASTE</string>
    <string name="copied">Copied %1$s to clipboard</string>
    <string name="memoryA3">DistoX A3 memory</string>
    <string name="memoryX310">DistoX X310 memory</string>
    <string name="memoryXBLE">DistoX-BLE memory</string>
    <string name="memoryCavway">Cavway memory</string>
    <string name="thp_user">user</string>
    <string name="thp_label">label</string>
    <string name="thp_section">section</string>
  <string name="pref_export_shots_title">Data export format</string>
  <string name="pref_export_shots_summary">Default format for data export</string>
  <string name="pref_cat_survey">SURVEY DATA</string>
  <string name="pref_cat_drawing">SKETCHING</string>
  <string name="pref_cat_import_export" copyable="all">IMPORT_EXPORT</string>
  <string name="pref_cat_device">DEVICES</string>
  <string name="pref_mkeyboard_title">Keyboard</string>
  <string name="pref_mkeyboard_summary">Enable custom keyboards</string>
  <string name="pref_extra_buttons_title">Usage profile</string>
  <string name="pref_extra_buttons_summary">Level of enabled features</string>
  <string name="pref_size_buttons_title">Buttons size</string>
  <string name="pref_size_buttons_summary">Size of action-bar buttons</string>
  <string name="pref_leg_shots_title">Leg minimum shots</string>
  <string name="pref_leg_shots_summary">Minimum number of shots for a leg</string>
  <string name="pref_location_title">LOCATION</string>
  <string name="pref_accuracy_title">ACCURACY</string>
  <string name="pref_shot_data_title">SHOT DATA</string>
  <string name="pref_shot_units_title">UNITS</string>
  <string name="pref_text_size_title">Text size</string>
  <string name="pref_text_size_summary">Size of text in lists</string>
  <string name="pref_survey_stations_title">Stations policy</string>
  <string name="pref_survey_stations_summary">Stations automatic naming policy</string>
  <string name="pref_leg_title">Leg tolerance</string>
  <string name="pref_leg_summary">Tolerance among the shots of a leg</string>
  <string name="pref_max_shot_title">Maximum shot length</string>
  <string name="pref_max_shot_summary">Maximum length of shooting [m]</string>
  <string name="pref_min_leg_title">Minimum leg length</string>
  <string name="pref_min_leg_summary">Minimum length of legs [m]</string>
  <string name="pref_backsight_title" copyable="">Backsight</string>
  <string name="pref_backsight_summary">Backsight fields in the new-shot dialog</string>
  <string name="pref_prev_next_title">Prev/Next buttons</string>
  <string name="pref_prev_next_summary">Prev/Next buttons in the shot dialog</string>
  <string name="pref_azimuth_manual_title">Manual extend reference</string>
  <string name="pref_azimuth_manual_summary">Manual L/R or settable extend reference</string>
  <string name="pref_team_title">Team</string>
  <string name="pref_team_summary">Default surveying team</string>
  <string name="pref_ethr_title">Shot vertical-extend threshold</string>
  <string name="pref_ethr_summary">Azimuth orthogonal to the reference with vertical extend</string>
  <string name="pref_vthr_title">Leg WENS threshold</string>
  <string name="pref_vthr_summary">Leg LRUD/WENS clino threshold (manual data)</string>
  <string name="pref_init_station_title">Initial station name</string>
  <string name="pref_init_station_summary">Default initial station name</string>
  <string name="pref_thumbnail_title">Thumbnails size</string>
  <string name="pref_thumbnail_summary">Size of photo thumbnails</string>
  <string name="pref_shot_timer_title">Shot direction timer</string>
  <string name="pref_shot_timer_summary">Seconds to wait before measuring the shot direction</string>
  <string name="pref_beep_volume_title">Timer-beep volume</string>
  <string name="pref_beep_volume_summary">Percent timer-beep volume</string>
  <string name="pref_segment_title">Line-point spacing</string>
  <string name="pref_segment_message">Minimum distance between points on a line</string>
  <string name="pref_linestyle_title">Line style</string>
  <string name="pref_linestyle_summary">Line drawing style</string>
  <string name="pref_lineacc_title">Interpolation accuracy</string>
  <string name="pref_lineacc_summary">Bezier cubic interpolation accuracy</string>
  <string name="pref_linecorner_title">Bezier corner threshold</string>
  <string name="pref_linecorner_summary">Bezier corner detection threshold</string>
  <string name="pref_arrow_length_title">Section line tick size</string>
  <string name="pref_arrow_length_message">Size of the section line tick</string>
  <string name="pref_line_thickness_title">Line width</string>
  <string name="pref_line_thickness_summary">Drawing line width</string>
  <string name="pref_unit_grid_title">Sketch units</string>
  <string name="pref_unit_grid_summary">Sketch grid cell size</string>
  <string name="pref_unit_length_title">Length units</string>
  <string name="pref_unit_length_summary">Display units for lengths</string>
  <string name="pref_unit_angle_title">Angle units</string>
  <string name="pref_unit_angle_summary">Display units for angles</string>
    <string name="cpref_selection_radius_title">Selection radius</string>
    <string name="cpref_selection_radius_summary">Radius of selection [20 pxl]</string>
    <string name="cpref_station_points_title">Station points</string>
    <string name="cpref_station_points_summary">Display stations always [n]</string>
    <string name="cpref_measure_dialog_title">Distance message</string>
    <string name="cpref_measure_dialog_summary">Distance message instead of dialog [n]</string>
    <string name="cpref_grid_above_title">Top grid</string>
    <string name="cpref_grid_above_summary">Grid on the top instead of bottom [n]</string>
    <string name="cpref_grid_extent_title">Grid extent</string>
    <string name="cpref_grid_extent_summary">Grid extent around the survey plan-view</string>
    <string name="cpref_neg_clino_title">Below-horizon views</string>
    <string name="cpref_neg_clino_summary">Allow below-horizon viewpoints [n]</string>
    <string name="cpref_dem_buffer_title" copyable="all">DEM buffer</string>
    <string name="cpref_dem_buffer_summary">Extension of the DEM around survey [200]</string>
    <string name="cpref_dem_maxsize_title">DEM max size</string>
    <string name="cpref_dem_maxsize_summary">Maximum number of cells [400]</string>
    <string name="cpref_dem_reduce_title">DEM reduce</string>
    <string name="cpref_dem_reduce_summary">DEM reducing mode [shrink]</string>
    <string name="cpref_all_splay_title">All splays</string>
    <string name="cpref_all_splay_summary">Whether to use all the splays for the walls [y]</string>
    <string name="cpref_splay_use_title">Splay usage</string>
    <string name="cpref_splay_use_summary">Splay use: none, normal, xsections [normal]</string>
    <string name="cpref_splay_proj_title">Projected splays</string>
    <string name="cpref_splay_proj_summary">Whether to use splays projected on a normal plane [n]</string>
    <string name="cpref_splay_thr_title">Splay threshold</string>
    <string name="cpref_splay_thr_summary">Splays outside the shot to keep [0.5]</string>
    <string name="cpref_split_triangles_title">Split triangles</string>
    <string name="cpref_split_triangles_summary">Whether to split intersecting wall triangles [y]</string>
    <string name="cpref_split_random_title">Randomize points</string>
    <string name="cpref_split_random_summary">Small random vector added to splays [0.1]</string>
    <string name="cpref_split_stretch_title">Stretch walls</string>
    <string name="cpref_split_stretch_summary">Stretch of wall points along the leg [0.1]</string>
    <string name="cpref_powercrust_delta_title" copyable="all">Powercrust Delta</string>
    <string name="cpref_powercrust_delta_summary">Exclude splays differing from nearby too much [0.1]</string>
</resources>