<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


     <com.topodroid.DistoX.MyEditPreference
       android:key="DISTOX_TEAM"
       android:title="@string/pref_team_title"
       android:summary="@string/pref_team_summary"
       android:dialogTitle="@string/pref_team_title"
       android:dialogMessage="@string/pref_team_message"
       android:defaultValue=""
     />

     <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_SURVEY_STATION"
       android:summary="@string/pref_survey_stations_summary"
       android:title="@string/pref_survey_stations_title"
       android:defaultValue="1"
       android:entries="@array/surveyStations"
       android:entryValues="@array/surveyStationsValue"
     />

     <com.topodroid.DistoX.MyEditPreference
       android:key="DISTOX_INIT_STATION"
       android:title="@string/pref_init_station_title"
       android:summary="@string/pref_init_station_summary"
       android:dialogTitle="@string/pref_init_station_title"
       android:dialogMessage="@string/pref_init_station_message"
       android:defaultValue="0"
     />

  <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_EXPORT_SHOTS"
       android:title="@string/pref_export_shots_title"
       android:summary="@string/pref_export_shots_summary"
       android:defaultValue="0"
       android:entries="@array/exportShots"
       android:entryValues="@array/exportShotsValue"
       />

<!--
     <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_UNIT_LENGTH"
       android:summary="@string/pref_unit_length_summary"
       android:title="@string/pref_unit_length_title"
       android:defaultValue="meters"
       android:entries="@array/unitLength"
       android:entryValues="@array/unitLengthValue"
     />

     <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_UNIT_ANGLE"
       android:summary="@string/pref_unit_angle_summary"
       android:title="@string/pref_unit_angle_title"
       android:defaultValue="degrees"
       android:entries="@array/unitAngle"
       android:entryValues="@array/unitAngleValue"
     />
-->

     <com.topodroid.DistoX.MyEditPreference
       android:key="DISTOX_THUMBNAIL"
       android:title="@string/pref_thumbnail_title"
       android:summary="@string/pref_thumbnail_summary"
       android:dialogTitle="@string/pref_thumbnail_title"
       android:dialogMessage="@string/pref_thumbnail_message"
       android:inputType="number"
       android:defaultValue="200" />

    <Preference
       android:key="DISTOX_SHOT_UNITS_SCREEN"
       android:title="@string/pref_shot_units_title"
       />

    <Preference
       android:key="DISTOX_SHOT_DATA_SCREEN"
       android:title="@string/pref_shot_data_title"
       android:textColor="#ff9966ff"
       />

    <Preference
       android:key="DISTOX_LOCATION_SCREEN"
       android:title="@string/pref_location_title"
       android:textColor="#ff9966ff"
       />

    <Preference
       android:key="DISTOX_ACCURACY_SCREEN"
       android:title="@string/pref_accuracy_title"
       android:textColor="#ff9966ff"
       />

</PreferenceScreen>
