<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- Preference
       android:key="DISTOX_CWD"
       android:title="@string/pref_cwd_title"
       / -->

  <com.topodroid.DistoX.MyEditPreference
       android:key="DISTOX_TEXT_SIZE"
       android:title="@string/pref_text_size_title"
       android:summary="@string/pref_text_size_summary"
       android:dialogTitle="@string/pref_text_size_title"
       android:dialogMessage="@string/pref_text_size_message"
       android:defaultValue="@string/default_textsize"
       android:inputType="number"
       />

  <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_SIZE_BUTTONS"
       android:title="@string/pref_size_buttons_title"
       android:summary="@string/pref_size_buttons_summary"
       android:defaultValue="@string/default_buttonsize"
       android:entries="@array/sizeButtons"
       android:entryValues="@array/sizeButtonsValue"
       />

  <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_EXTRA_BUTTONS"
       android:summary="@string/pref_extra_buttons_summary"
       android:title="@string/pref_extra_buttons_title"
       android:defaultValue="1"
       android:entries="@array/extraButtons"
       android:entryValues="@array/extraButtonsValue"
       />

  <CheckBoxPreference
       android:key="DISTOX_MKEYBOARD"
       android:summary="@string/pref_mkeyboard_summary"
       android:title="@string/pref_mkeyboard_title"
       android:defaultValue="true"
       />

  <!-- CheckBoxPreference
       android:key="DISTOX_BOOTLOADER"
       android:summary="@string/pref_bootloader_summary"
       android:title="@string/pref_bootloader_title"
       android:defaultValue="false"
       / -->

  <!-- CheckBoxPreference
       android:key="DISTOX_COSURVEY"
       android:title="@string/pref_cosurvey_title"
       android:summary="@string/pref_cosurvey_summary"
       android:defaultValue="false"
       / -->

  <!-- com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_LOCALE"
       android:title="@string/pref_locale_title"
       android:summary="@string/pref_locale_summary"
       android:defaultValue=""
       android:entries="@array/locale"
       android:entryValues="@array/localeValue"
       / -->

  <Preference
     android:key="DISTOX_IMPORT_EXPORT_PREF"
     android:title="@string/pref_cat_import_export"
     android:textColor="@color/pref_category"
     />

  <Preference
     android:key="DISTOX_SURVEY_PREF"
     android:title="@string/pref_cat_survey"
     />

  <Preference
     android:key="DISTOX_PLOT_PREF"
     android:title="@string/pref_cat_drawing"
     />

  <Preference
     android:key="DISTOX_DEVICE_PREF"
     android:title="@string/pref_cat_device"
     />

  <!-- Preference
     android:key="DISTOX_CALIB_PREF"
     android:title="@string/pref_cat_calib"
     / -->

</PreferenceScreen>
