<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

     <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_UNIT_LENGTH"
       android:summary="@string/pref_unit_length_summary"
       android:title="@string/pref_unit_length_title"
       android:defaultValue="meters"
       android:entries="@array/unitLength"
       android:entryValues="@array/unitLengthValue"
     />

     <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_UNIT_ANGLE"
       android:summary="@string/pref_unit_angle_summary"
       android:title="@string/pref_unit_angle_title"
       android:defaultValue="degrees"
       android:entries="@array/unitAngle"
       android:entryValues="@array/unitAngleValue"
     />

    <com.topodroid.DistoX.MyListPreference
       android:key="DISTOX_UNIT_GRID"
       android:title="@string/pref_unit_grid_title"
       android:summary="@string/pref_unit_grid_summary"
       android:defaultValue="1"
       android:entries="@array/unitGrid"
       android:entryValues="@array/unitGridValue"
       />

</PreferenceScreen>
